@Ouput to send event from painel to app, to inform end of the game

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-topo></app-topo>
 
-<app-painel>
+<app-painel (encerrarJogo)="encerrarJogo($event)">
   <!--
     this is wrong! I must edit painel's html file
   <app-progresso></app-progresso>
