Destroying panel when the game ends

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
 <app-topo></app-topo>
 
-<app-painel (encerrarJogo)="encerrarJogo($event)">
-  <!--
-    this is wrong! I must edit painel's html file
-  <app-progresso></app-progresso>
-  <app-tentativas></app-tentativas>
-  -->
-</app-painel>
+
+<div *ngIf="jogoEmAndamento">
+	<app-painel (encerrarJogo)="encerrarJogo($event)">
+	  <!--
+	    this is wrong! I must edit painel's html file
+	  <app-progresso></app-progresso>
+	  <app-tentativas></app-tentativas>
+	  -->
+	</app-painel>
+</div>
