--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-topo></app-topo>
 
 
-<div *ngIf="jogoEmAndamento">
+<div *ngIf="jogoEmAndamento; else fimDeJogo">
 	<app-painel (encerrarJogo)="encerrarJogo($event)">
 	  <!--
 	    this is wrong! I must edit painel's html file
@@ -10,3 +10,21 @@
 	  -->
 	</app-painel>
 </div>
+<ng-template #fimDeJogo>
+	<div *ngIf="tipoEncerramento === 'derrota'; else fimDeJogoVitoria" class="container" style="margin-top: 50px">
+		<div class="row">
+			<div class="col">
+				<h3 style="color: red">Você perdeu, tente novamente! :(</h3>
+			</div>
+		</div>
+	</div>
+</ng-template>
+<ng-template #fimDeJogoVitoria>
+	<div class="container" style="margin-top: 50px">
+		<div class="row">
+			<div class="col">
+				<h3 style="color: green">Parabéns, você venceu! :)</h3>
+			</div>
+		</div>
+	</div>
+</ng-template>
